--- a/pluralsight-vscode-samples-master/codeplay/bower.json
+++ b/pluralsight-vscode-samples-master/codeplay/bower.json
@@ -16,7 +16,18 @@
         "sinon": "http://sinonjs.org/releases/sinon-1.12.1.js",
         "bardjs": "~0.1.4"
     },
-    "dependencies": { jquery angular angular-sanitize bootstrap extras.angular.plus font-awesome moment angular-ui-router toastr angular-animate
+    "dependencies": {
+        
+        "jquery": "~2.1.4",
+        "angular": "~1.3.17",
+        "angular-sanitize": "~1.3.17",
+        "bootstrap": "~3.3.5",
+        "extras.angular.plus": "~0.9.2",
+        "font-awesome": "~4.3.0",
+        "moment": "~2.10.3",
+        "angular-ui-router": "~0.2.15",
+        "toastr": "~2.1.1",
+        "angular-animate": "~1.3.17"
     },
     "resolutions": {
         "angular": "1.3.17"
